@startuml
interface Writable
class Expense
class ExpenseList
class TravelingPartner
class TravelingPartnerList
class Event
class EventLog
class JsonReader
class JsonWriter
class LoadAndSaveDataManager
class Main
class PopUpGifManager
class TravelAccountantApp
class TravelingPartnerListPanel

Expense ..|> Writable
ExpenseList ..|> Writable
TravelingPartner ..|> Writable
TravelingPartnerList ..|> Writable

ExpenseList --> "0...*" Expense
TravelingPartnerList --> "0...*" TravelingPartner
EventLog --> "0...*" Event

LoadAndSaveDataManager --> "1" ExpenseList
LoadAndSaveDataManager --> "1" TravelingPartnerList
LoadAndSaveDataManager --> "4" JsonWriter
LoadAndSaveDataManager --> "4" JsonReader

TravelAccountantApp --> "1" ExpenseList
TravelAccountantApp --> "1" TravelingPartnerList
TravelAccountantApp --> "1" PopUpGifManager
TravelAccountantApp --> "1" LoadAndSaveDataManager
TravelAccountantApp --> "1" TravelingPartnerListPanel
@enduml

